Manifest/Portainer/PortainerDeployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: portainer
---
apiVersion: v1
kind: Service
metadata:
  name: portainer
  namespace: portainer
  annotations:
    traefik.ingress.kubernetes.io/service.sticky.cookie: "true"
spec:
  type: ExternalName
  externalName: 192.168.40.9
  selector:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: portainer
  namespace: portainer
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.portainer.cybertronlabs.us`) # change to your domain
      kind: Rule
      services:
        - name: portainer
          port: 9000
    - match: Host(`portainer.cybertronlabs.us`) # change to your domain
      kind: Rule
      services:
        - name: portainer
          port: 9000
      middlewares:
        - name: default-headers
          namespace: traefik
        - name: rate-limit
          namespace: traefik
  tls:
    secretName: cybertronlabs-tls # change to your cert name
