Manifest/Portainer/portainer.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: portainer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: portainer
    app.kubernetes.io/instance: portainer
    app.kubernetes.io/name: portainer
  name: portainer
  namespace: portainer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portainer
  template:
    metadata:
      labels:
        app: portainer
    spec:
      nodeSelector:
        worker: "true"
      containers:
        - env:
            - name: TZ
              value: "America/Chicago"
          image: portainer/portainer-ce:latest
          imagePullPolicy: Always
          name: portainer
          ports:
            - containerPort: 9000
              name: web
              protocol: TCP
          volumeMounts:
            - mountPath: /data
              name: portainer
              subPath: data
      volumes:
        - name: portainer
          persistentVolumeClaim:
            claimName: portainer
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: portainer
  name: portainer
  namespace: portainer
spec:
  ports:
    - name: web-tcp
      port: 9000
      protocol: TCP
      targetPort: 9000
  selector:
    app: portainer
  type: ClusterIP

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: portainer
  namespace: portainer
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.portainer.cybertronlabs.us`) # change to your domain
      kind: Rule
      services:
        - name: portainer
          port: 9000
    - match: Host(`portainer.cybertronlabs.us`) # change to your domain
      kind: Rule
      services:
        - name: portainer
          port: 9000
      middlewares:
        - name: default-headers
          namespace: traefik
        - name: rate-limit
          namespace: traefik
  tls:
    secretName: cybertronlabs-tls # change to your cert name

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: rate-limit
  namespace: portainer
spec:
  rateLimit:
    average: 100
    burst: 50
